// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps returns the right keys 1`] = `
Object {
  "addAttachment": [Function],
  "changeQueryString": [Function],
  "clearLinkPreview": [Function],
  "createPost": [Function],
  "fetchDefaultTopics": [Function],
  "goToUrl": [Function],
  "pollingFetchLinkPreviewRaw": [Function],
  "removeLinkPreview": [Function],
  "setAnnouncement": [Function],
  "updatePost": [Function],
}
`;

exports[`mapStateToProps returns the right keys for a new post 1`] = `
Object {
  "announcementSelected": undefined,
  "canModerate": undefined,
  "context": undefined,
  "currentGroup": null,
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "defaultTopics": Array [],
  "editing": false,
  "editingPostId": undefined,
  "fetchLinkPreviewPending": false,
  "fileAttachments": Array [],
  "groupOptions": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "100",
        "name": "bar",
        "slug": "bar",
      },
    },
    SessionBoundModel {
      "_fields": Object {
        "id": "99",
        "name": "foo",
        "slug": "foo",
      },
    },
  ],
  "groupSlug": undefined,
  "imageAttachments": Array [],
  "isEvent": false,
  "isProject": false,
  "linkPreview": null,
  "linkPreviewStatus": false,
  "loading": false,
  "location": Object {
    "search": "",
  },
  "myModeratedGroups": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "99",
        "name": "foo",
        "slug": "foo",
      },
    },
  ],
  "post": null,
  "postPending": false,
  "postType": undefined,
  "querystringParams": Object {},
  "showFiles": false,
  "showImages": false,
  "topic": null,
  "topicName": undefined,
  "uploadFileAttachmentPending": false,
  "uploadImageAttachmentPending": false,
}
`;

exports[`mapStateToProps returns the right keys for a new post while pending 1`] = `
Object {
  "announcementSelected": undefined,
  "canModerate": undefined,
  "context": undefined,
  "currentGroup": null,
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "defaultTopics": Array [],
  "editing": false,
  "editingPostId": undefined,
  "fetchLinkPreviewPending": false,
  "fileAttachments": Array [],
  "groupOptions": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "100",
        "name": "bar",
        "slug": "bar",
      },
    },
    SessionBoundModel {
      "_fields": Object {
        "id": "99",
        "name": "foo",
        "slug": "foo",
      },
    },
  ],
  "groupSlug": undefined,
  "imageAttachments": Array [],
  "isEvent": false,
  "isProject": false,
  "linkPreview": null,
  "linkPreviewStatus": false,
  "loading": true,
  "location": Object {
    "search": "",
  },
  "myModeratedGroups": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "99",
        "name": "foo",
        "slug": "foo",
      },
    },
  ],
  "post": null,
  "postPending": true,
  "postType": undefined,
  "querystringParams": Object {},
  "showFiles": false,
  "showImages": false,
  "topic": null,
  "topicName": undefined,
  "uploadFileAttachmentPending": false,
  "uploadImageAttachmentPending": false,
}
`;

exports[`mergeProps goToPost redirects to group feed with no topicName 1`] = `
Array [
  Array [
    "/groups/theslug/post/123",
  ],
]
`;

exports[`mergeProps goToPost redirects to topic with topicName 1`] = `
Array [
  Array [
    "/groups/theslug/topics/thetopicname/post/123",
  ],
]
`;
